# C--bible-by-jall

./: README.md
Docs/: install rcedit and chocolatey.txt
SFMLApp/: CMakeLists.txt  build_and_run.ps1
SFMLApp/src/: main.cpp
constants/: topics.h
main/: main.cpp
topics_objects/: topics_objects.h
